css/app.css
/* app css stylesheet */

.menu {
  list-style: none;
  border-bottom: 0.1em solid black;
  margin-bottom: 2em;
  padding: 0 0 0.5em;
}

.menu:before {
  content: "[";
}

.menu:after {
  content: "]";
}

.menu > li {
  display: inline;
}

.menu > li:before {
  content: "|";
  padding-right: 0.3em;
}

.menu > li:nth-child(1):before {
  content: "";
  padding: 0;
}

.logo-padding {
  padding-left: 10px !important;
  padding-right: 10px !important;
}

.fade{
    position: absolute;
    top:auto;
    left: 0;
    right: 0;
}
.fade.ng-enter,
.fade.ng-leave {
    -webkit-transition: all .7s ease;
    transition: all .7s ease;
}
.fade.ng-enter {
    opacity: 0;
}
.fade.ng-enter-active {
    opacity: 1;
}
.fade.ng-leave {
    opacity: 1;
}
.fade.ng-leave-active {
    opacity: 0;
}

